--- a/One.ipynb
+++ b/One.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "# incase you havent installed tensorflow(size: 450-500mb)  : !pip install tensorflow"
    ]
   },
   {
@@ -28,10 +29,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Preprocessing\n",
+    "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
+    "x_train = x_train.astype('float')/255.\n",
+    "x_test = x_test.astype('float')/255.\n",
+    "x_train = np.reshape(x_train,(60000, 784))\n",
+    "x_test = np.reshape(x_test, (10000, 784))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Adding Noise\n",
+    "\n",
+    "x_train"
+   ]
   }
  ],
  "metadata": {
